--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">웹페이지 코딩 배우기</div>
+        <div class="bucket img1-t2 center done">웹페이지 코딩 배우기</div>
         <div class="bucket img2 center">SQL 코딩 배우기</div>
         <div class="bucket img2 center">전산 회계 1급 공부하기</div>
         <div class="bucket img1-t4 center">전산 세무 2급 공부하기</div>
